project/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client-container
          image: client-container:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
