project/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server-container
          image: server-container:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
