project/mongo-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongo-cluster-ip

spec: 
  type: ClusterIP
  ports: 
    - port: 27017
      targetPort: 27017

  selector: 
    app: mymongo
    type: db
