project/ingress-service-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-service-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  
spec:
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 80
