project/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  
spec:
  rules:
    - http: 
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service: 
                name: server-cluster-ip
                port: 
                  number: 5000
